Mejorando el index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>git</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <div class="container">
+        <h2>Jose Luis</h2>    
+    </div>
 </body>
 </html>
